--- a/.github/workflows/Azure-Pipelines.yml
+++ b/.github/workflows/Azure-Pipelines.yml
@@ -9,13 +9,13 @@ trigger:
 variables:
 
   # Azure Resource Manager connection created during pipeline creation
-  azureSubscription: '52314491-b944-4f7e-bbe0-af2537c5428f'
+  azureSubscription: '21063c9e-7000-4d03-811a-d47aca8385a2'
   
   # Web app name
-  webAppName: 'hanselsugar'
+  webAppName: 'Mysugar'
   
   # Environment name
-  environmentName: 'hanselsugar'
+  environmentName: 'Mysugar'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
