--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 variables:
 
   # Azure Resource Manager connection created during pipeline creation
-  azureSubscription: '21063c9e-7000-4d03-811a-d47aca8385a2'
+  azureSubscription: 'NightscoutCON'
   
   # Web app name
   webAppName: 'NightScoutHost'
